Create handler of updating only article object (not include content)
